--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
       <img src="./images/loginpage/logo.png" alt="Logo Desktop" class="logo-size">
     </header>
 
-    <!-- ✅ Mobile Header -->
-    <h2 class=" fs-1 mb-3 text-white d-block d-sm-none extra-bold">REGÍSTRATE AQUÍ</h2>
 
     <!-- ✅ Triangle Section -->
     <main class="page1__triangle text-white">
       <div class="triangle-content">
-        <h2 class="fw-bold fs-2 mb-3 d-none d-md-block extra-bold">REGÍSTRATE AQUÍ</h2>
+        <h2 class="fw-bold fs-1 mb-3 d-non d-md-block bold-font SetSEResolution">REGÍSTRATE AQUÍ</h2>
         <form class="d-flex flex-column align-items-center justify-content-center">
           <div class="md-mt-2 d-flex flex-column col-6 col-md-12 align-items-center justify-content-center">
             <p class="mb-1 text-center text-warning semi-lignt">NOMBRES Y APELLIDOS</p>
@@ -48,27 +46,27 @@
             <p class="mb-1 text-center text-warning fw-semibold d-none d-md-block semi-lignt">EMAIL</p>
             <input type="email" class="form-control semi-lignt" id="email" placeholder="Your Email" required>
           </div>
-          <button type="submit" class="btn btn-danger px-1 py-2 mt-2 semi-lignt">ENTRAR</button>
+          <button type="submit" class="btn btn-danger px-1 py-1 mt-2 bold-font">ENTRAR</button>
         </form>
       </div>
     </main>
 
-    <div style="position: relative; z-index: 20;">
-      <p class=" fs-1 fst-italic text-white d-none d-md-block bold-font">Juntos, lo hacemos posible</p>
+    <div class="my-4 SetMarginClass">
+      <p class=" fs-1 fst-italic text-white bold-font">Juntos, lo hacemos posible</p>
     </div>
     
 
     <!-- ✅ Desktop Bottom Red Box -->
-    <div class="bgRedBg d-none d-md-block position-absolute start-50 translate-middle-x rounded text-center">
+    <div class="bgRedBg position-absolute  text-center">
       <div class="row align-items-center justify-content-center compact-box">
-        <div class="col-auto">
-          <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img">
+        <div class="col-auto p-0 m-0">
+          <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img mb-2 ">
         </div>
-        <div class="col-auto text-white">
-          <h3 class="m-0 fs-1 fs-md-2 extra-bold">Sodimac</h3>
+        <div class="col-auto text-white p-1 m-0">
+          <h3 class="m-0 fs-1 fs-md-2 bold-font">Sodimac</h3>
         </div>
       </div>
-      <p class="text-white fs-5 whitespace-nowrap mb-0 semi-lignt">
+      <p class="text-white fs-5 whitespace-nowrap mb-0 bold-font ">
         LUNES 12 DE MAYO / 09.00 HRS / WWW.ENCUENTROSODIMAC.CL
       </p>
     </div>
@@ -78,20 +76,17 @@
   <!-- ✅ Mobile Footer -->
   <footer class="mobile-footer d-block d-md-none text-white text-center py-3 px-0">
     <div class="row align-items-center justify-content-center">
-      <div class="col-auto">
-        <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img">
+      <div class="col-auto mx-0 mb-2 p-0">
+        <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img m-0 p-0">
       </div>
-      <div class="col-auto text-white">
-        <p class="m-0 fs-3 fs-md-4 extra-bold">Sodimac</p>
+      <div class="col-auto text-white p-1">
+        <p class="m-0 fs-3 fs-md-4 bold-font p-0">Sodimac</p>
       </div>
     </div>
   </footer>
 
   <style>
-    .logo-img {
-      height: 30px;
-      object-fit: contain;
-    }
+   
   </style>
   <!-- Add this to your CSS or inline -->
 
