--- a/index.html
+++ b/index.html
@@ -36,34 +36,35 @@
     <!-- ✅ Triangle Section -->
     <main class="page1__triangle text-white">
       <div class="triangle-content">
-        <h2 class="fw-bold fs-1 mb-3 d-non d-md-block bold-font SetSEResolution">REGÍSTRATE AQUÍ</h2>
+        <h2 class="fw-bold  mb-3 d-non d-md-block bold-font SetSEResolution">REGÍSTRATE AQUÍ</h2>
         <form class="d-flex flex-column align-items-center justify-content-center">
           <div class="md-mt-2 d-flex flex-column col-6 col-md-12 align-items-center justify-content-center">
-            <p class="mb-1 text-center text-warning semi-lignt">NOMBRES Y APELLIDOS</p>
-            <input type="text" class="form-control semi-lignt" id="name" placeholder="Your Name" required>
+            <p class="mb-1 text-center text-warning semi-lignt FontSize">NOMBRES Y APELLIDOS</p>
+            <input type="text" class="form-control semi-lignt rounded-0 bg-white" id="name" placeholder="" required>
           </div>
           <div class="md-mb-3 d-flex flex-column col-6 col-md-12 align-items-center justify-content-center">
-            <p class="mb-1 text-center text-warning fw-semibold d-none d-md-block semi-lignt">EMAIL</p>
-            <input type="email" class="form-control semi-lignt" id="email" placeholder="Your Email" required>
+            <p class="mb-1 text-center text-warning semi-lignt FontSize">EMAIL</p>
+            <input type="email" class="form-control semi-lignt rounded-0 bg-white" id="email" placeholder="" required>
           </div>
-          <button type="submit" class="btn btn-danger px-1 py-1 mt-2 bold-font">ENTRAR</button>
+          <button type="submit" class="btn bold-font">ENTRAR</button>
         </form>
+        
       </div>
     </main>
 
-    <div class="my-4 SetMarginClass">
-      <p class=" fs-1 fst-italic text-white bold-font">Juntos, lo hacemos posible</p>
+    <div class="my-2 SetMarginClass">
+      <p class=" fst-italic text-white semi-bold middleText fw-semibold">Juntos, lo hacemos posible</p>
     </div>
     
 
     <!-- ✅ Desktop Bottom Red Box -->
-    <div class="bgRedBg position-absolute  text-center">
+    <div class="bgRedBg   text-center">
       <div class="row align-items-center justify-content-center compact-box">
         <div class="col-auto p-0 m-0">
           <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img mb-2 ">
         </div>
         <div class="col-auto text-white p-1 m-0">
-          <h3 class="m-0 fs-1 fs-md-2 bold-font">Sodimac</h3>
+          <h3 class="m-0 fs-1 fs-md-2 extra-bold">SODIMAC</h3>
         </div>
       </div>
       <p class="text-white fs-5 whitespace-nowrap mb-0 bold-font ">
@@ -80,7 +81,7 @@
         <img src="./images/loginpage/home-logo.png" alt="Logo" class="logo-img m-0 p-0">
       </div>
       <div class="col-auto text-white p-1">
-        <p class="m-0 fs-3 fs-md-4 bold-font p-0">Sodimac</p>
+        <p class="m-0 fs-3 fs-md-4 extra-bold p-0">SODIMAC</p>
       </div>
     </div>
   </footer>
